<package format="2">
	<name>template_package</name>
	<version>0.0.1</version>
	<description>M2 template package.</description>
	<maintainer email="robocon@hku.hk">M2</maintainer>
	<license>M2</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rospy</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>

	<build_depend>message_generation</build_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
